fix(Skills): Tooltip underline too long on mobile

--- a/src/assets/styles/components/_skills.scss
+++ b/src/assets/styles/components/_skills.scss
@@ -62,6 +62,5 @@
 }
 
 #Skills .tooltip {
-  border-bottom: 1.5px #000 dashed;
-  padding: 0.2rem;
+  text-decoration: underline 3px dotted;
 }
